# Data_Structure_2019

./: .gitignore  CMakeLists.txt  Final_TrieTree.c  Final_hash.c  README.md
20200219/: example1_new.c  example1c.c  expand.c  notation.c  pailie.c  subtract.c
20200225/: example1.c  expand.c  notation.c  pailie.c  subtract.c
20200303/: books.c  chess.c  class.c  encrypt.c  replace.c  sore_new.c  sort.c  test.c
20200317/: article.txt  count.c  count_ori.c  encode.c  final.c  gmon.out  in.txt  in_crpyt.txt  line.c  monkey.c  multi.c  test.c
20200324/: class.c
20200407/: caculate.c  check.c  edit.c  edit_ex.c  example.c  gmon.out  mid-rear.c  simulate.c  stack.c  test.c
20200421/: article.txt  bst.c  caculate.c  cnt.c  nest.c  netTree.c
20200421/Experiment/: huffman2student.c  input.txt  output.txt
20200428/: HuffmanDZIP.c  HuffmanZIP.c  input.txt  output.txt
20200506/: find.c  seat.c
20200512/: nest.c
20200519/: graphSearch.c  route.c
20200526/: bgstations.txt  smallest_tree.c  station.c
20200609/: sort.c
Code/: OutputProgram.txt
Final works/: Final_TrieTree.c  Final_hash.c  Final_hash_point.c  Final_hash_point_biread.c  article1.txt  final.c  gmon.out  hash_test.c  results.txt
FinalTest/: files.txt  find.c  gmon.out  space.c  test.c  train.c
FinalTest Mold/: 1.c  stackCheck.c
backup/: article2.txt
