project(DATA_STRUCTURE)
set(CMAKE_C_STANDARD 99)

add_executable(example1c 20200219/example1c.c)
add_executable(example1_new 20200219/example1_new.c)
add_executable(books 20200303/books.c)
add_executable(chess 20200303/chess.c)
add_executable(sore_new 20200303/sore_new.c)
add_executable(netTree 20200421/netTree.c)
add_executable(route 20200519/route.c)
add_executable(station 20200526/station.c)